RESOLVED FIXED119236
Inactive style sheets should not trigger style recalc when loaded.
https://bugs.webkit.org/show_bug.cgi?id=119236
Summary Inactive style sheets should not trigger style recalc when loaded.
Andreas Kling
Reported 2013-07-30 00:28:20 PDT
Try to be clever about non-blocking stylesheet insertions.
Attachments
For EWS (623 bytes, patch)
2013-07-30 00:29 PDT, Andreas Kling
no flags
Patch (6.67 KB, patch)
2013-07-30 02:17 PDT, Andreas Kling
koivisto: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 (1.35 MB, application/zip)
2013-07-30 09:54 PDT, Build Bot
no flags
Patch for landing (6.00 KB, patch)
2013-07-30 12:43 PDT, Andreas Kling
no flags
Patch for landing (5.93 KB, patch)
2013-07-30 12:45 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2013-07-30 00:29:07 PDT
Radar WebKit Bug Importer
Comment 2 2013-07-30 02:15:03 PDT
Andreas Kling
Comment 3 2013-07-30 02:17:45 PDT
Antti Koivisto
Comment 4 2013-07-30 02:23:21 PDT
Comment on attachment 207703 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=207703&action=review > Source/WebCore/html/HTMLLinkElement.h:105 > + enum SheetRenderingParticipation { None, SheetParticipatesInRendering, SheetDoesNotParticipateInRendering }; Isn't it more like Unknown than None?
Andreas Kling
Comment 5 2013-07-30 02:25:00 PDT
(In reply to comment #4) > (From update of attachment 207703 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=207703&action=review > > > Source/WebCore/html/HTMLLinkElement.h:105 > > + enum SheetRenderingParticipation { None, SheetParticipatesInRendering, SheetDoesNotParticipateInRendering }; > > Isn't it more like Unknown than None? Yeah fair enough. Let's call it Unknown. Will wait for EWS before landering this.
Andreas Kling
Comment 6 2013-07-30 02:43:46 PDT
Hm, this'll break fast/css/sheet-collection-link.html I'll figure it out after I sleep.
Build Bot
Comment 7 2013-07-30 09:54:53 PDT
Comment on attachment 207703 [details] Patch Attachment 207703 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/1289467 New failing tests: fast/css/sheet-collection-link.html
Build Bot
Comment 8 2013-07-30 09:54:55 PDT
Created attachment 207745 [details] Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
Andreas Kling
Comment 9 2013-07-30 12:42:30 PDT
After sleeping, I realized that "enum SheetRenderingParticipation { None, SheetParticipatesInRendering, SheetDoesNotParticipateInRendering };" is beyond terrible.
Andreas Kling
Comment 10 2013-07-30 12:43:48 PDT
Created attachment 207757 [details] Patch for landing
Andreas Kling
Comment 11 2013-07-30 12:45:31 PDT
Created attachment 207758 [details] Patch for landing
Andreas Kling
Comment 12 2013-07-30 14:35:17 PDT
Note You need to log in before you can comment on or make changes to this bug.